💄 Fix overflow bug

--- a/src/pages/Homepage/styles.module.css
+++ b/src/pages/Homepage/styles.module.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   background-color: #171717;
   color: #fafafa;
